# dmadump

./: CMakeLists.txt  README.md
cli/: CLI.cpp  CLI.hpp  CMakeLists.txt  Main.cpp
cmake/: MemProcFS.cmake  capstone.cmake  cxxopts.cmake  unicorn.cmake
include/dmadump/: Dumper.hpp  Handle.hpp  IATBuilder.hpp  IATResolver.hpp  ImportDirLayout.hpp  ModuleInfo.hpp  ModuleList.hpp  SectionBuilder.hpp  Utils.hpp
include/dmadump/dumper/: VMMDumper.hpp  VmmDumper.hpp  Win32Dumper.hpp
include/dmadump/iat/: DynamicIATResolver.hpp
src/: CmdLine.cpp  CmdLine.hpp  Dumper.cpp  Dumper.hpp  DynamicIATResolver.cpp  DynamicIATResolver.hpp  IATBuilder.cpp  IATBuilder.hpp  IATResolver.cpp  IATResolver.hpp  IATResolverBase.cpp  IATResolverBase.hpp  ImportDirLayout.cpp  Logging.cpp  Logging.hpp  Main.cpp  ModuleExportInfo.cpp  ModuleExportInfo.hpp  ModuleInfo.cpp  ModuleInfo.hpp  ModuleList.cpp  ModuleList.hpp  PE.cpp  PE.hpp  SectionBuilder.cpp  SectionBuilder.hpp  Utils.cpp  Utils.hpp  VMMDumper.cpp  VMMDumper.hpp
src/Dumper/: Win32Dumper.cpp
src/dumper/: VMMDumper.cpp  VmmDumper.cpp
src/iat/: DynamicIATResolver.cpp
